switched font sizes on mobile to 16px to prevent zoom on ios

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -125,7 +125,7 @@
 
     .event-creator-form > textarea {
         min-height: 80px;
-        font-size: 14px;
+        font-size: 16px;
     }
 
     .link {
@@ -158,7 +158,7 @@
 
     .event-creator-form > textarea {
         min-height: 100px;
-        font-size: 15px;
+        font-size: 16px;
     }
 
     .link {
